--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^8.26.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.4",
