--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.26.0",
+    "nawenn-modal-react": "^0.1.2",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
